# kuso-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  kuso_agent_colab.ipynb  pyproject.toml
kuso_agent/: __init__.py  root_agent.yaml
kuso_agent/configs/adviser/: kuso_adviser.yaml
kuso_agent/configs/converter/: kuso_converter.yaml  kuso_converter_mayhem.yaml
kuso_agent/configs/judge/: kuso_candidate_judge.yaml
kuso_agent/configs/pipelines/: kuso_parallel_candidates.yaml
kuso_agent/configs/presenters/: candidate_presenter_a.yaml  candidate_presenter_b.yaml
kuso_agent/configs/selectors/: select_overseas_proverb_agent.yaml  select_proverb_agent_classic.yaml  select_proverb_agent_maverick.yaml  select_yojijukugo_agent.yaml
kuso_agent/tools/: __init__.py  proverbs.py
kuso_agent_v2/: __init__.py  kuso_advice_agent.yaml  kuso_candidate_pipeline_a.yaml  kuso_candidate_pipeline_b.yaml  kuso_converter.yaml  kuso_parallel_candidates.yaml  root_agent.yaml  select_kuso_proverb.yaml
kuso_agent_v2/configs/adviser/: kuso_adviser.yaml
kuso_agent_v2/configs/converter/: kuso_converter.yaml  kuso_converter_mayhem.yaml
kuso_agent_v2/configs/judge/: kuso_candidate_judge.yaml
kuso_agent_v2/configs/pipelines/: kuso_advice_agent.yaml
kuso_agent_v2/configs/presenters/: candidate_presenter_a.yaml  candidate_presenter_b.yaml
kuso_agent_v2/configs/selectors/: select_proverb_agent_classic.yaml  select_proverb_agent_maverick.yaml
kuso_agent_v2/tmp/kuso_agent_v2/: kuso_adviser.yaml  (+5 more)
kuso_agent_v2/tools/: __init__.py  proverbs.py
(+3 files in other folders)
