[project]
name = "kuso-agent"
version = "0.1.0"
description = "Google ADKを使用したクソエージェント・相談にクソなアドバイスをしてくれる"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk",
    "litellm"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kuso-agent"]

[tool.uv]
dev-dependencies = []

